<?xml version="1.0" encoding="utf-8"?>
<!-- Contains the layout for the recipe overview: the name of the recipe and the ingriedents list -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvStepsLabel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_steps" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <!-- I am using a RecyclerView for displaying the overview of the recipe steps -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />

    </ScrollView>

</LinearLayout>