...
                android:textSize="@dimen/headline_font_size"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tv_recipeName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
...
